# spc

./: .gitignore  Dockerfile  README.md  example.env  push_image.sh  pyproject.toml  spc.py
.github/workflows/: docker-image.yml
src/spc_db/: lambda_function.py
src/spc_db/docs/: openapi.json
src/spc_loc/: __main__.py  db.py  spc.py
src/weather/: __main__.py
